Plugin compatibility with IDE 2022.3 (#1653)